--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
