--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
